Blender crashes when deleting particle hair keys #63590

Closed
opened 2019-04-14 13:21:02 +02:00 by Janez Rupar · 5 comments

System Information
Operating system: Ubuntu 18:04 64 bit
Graphics card: Nvidia 1070 8gb

Blender Version
Broken: (example: 2.80, 14884cda1f, master, commit date: 2019-04-13 18:58
Worked:

Blender crashes when deleting particle hair keys

Exact steps for others to reproduce the error

  1. Open the provided bug1.blend file.
  2. if not on particle edit navigate to particle edit of the sphere
  3. try deleting selected particle keys via shortcut - press x and select "key" from the menu. (Blender crashes)

attached blender file, crash file and system info

Files:
bug1.crash.txt
system-info.txt
bug1.blend

**System Information** Operating system: Ubuntu 18:04 64 bit Graphics card: Nvidia 1070 8gb **Blender Version** Broken: (example: 2.80, 14884cda1ff5, master, commit date: 2019-04-13 18:58 Worked: Blender crashes when deleting particle hair keys **Exact steps for others to reproduce the error** 1. Open the provided bug1.blend file. 2. if not on particle edit navigate to particle edit of the sphere 3. try deleting selected particle keys via shortcut - press x and select "key" from the menu. (Blender crashes) attached blender file, crash file and system info Files: [bug1.crash.txt](https://archive.blender.org/developer/F6943536/bug1.crash.txt) [system-info.txt](https://archive.blender.org/developer/F6943562/system-info.txt) [bug1.blend](https://archive.blender.org/developer/F6943542/bug1.blend)
Author

Added subscriber: @JanezRupar

Added subscriber: @JanezRupar
Janez Rupar changed title from Blender crashes to Blender crashes when deleting particle hair keys 2019-04-14 13:27:36 +02:00

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Sergey Sharybin was assigned by Sebastian Parborg 2019-04-14 15:57:57 +02:00

Backtrace:

Thread 1 "blender" received signal SIGSEGV, Segmentation fault.
0x000055555858acbd in psys_face_mat (ob=0x7fffc5fa8208, mesh=0x0, pa=0x7fffc9cad008, mat=0x7fffffffd3f0, orco=1)
    at /home/zed/prog/blender/source/blender/blenkernel/intern/particle.c:2984
2984		if (i == -1 || i >= mesh->totface) { unit_m4(mat); return; }
(gdb) bt
#0  0x000055555858acbd in psys_face_mat (ob=0x7fffc5fa8208, mesh=0x0, pa=0x7fffc9cad008, mat=0x7fffffffd3f0, orco=1)
    at /home/zed/prog/blender/source/blender/blenkernel/intern/particle.c:2984
#1  0x000055555858b04b in psys_mat_hair_to_orco (ob=0x7fffc5fa8208, mesh=0x0, from=1, pa=0x7fffc9cad008, hairmat=0x7fffffffd3f0)
    at /home/zed/prog/blender/source/blender/blenkernel/intern/particle.c:3027
#2  0x0000555557af7ed4 in PE_mirror_particle (ob=0x7fffc5fa8208, mesh=0x0, psys=0x7fffc9cd7408, pa=0x7fffc9cad008, mpa=0x7fffc9cad7d8)
    at /home/zed/prog/blender/source/blender/editors/physics/particle_edit.c:997
#3  0x0000555557afd656 in remove_tagged_keys (ob=0x7fffc5fa8208, psys=0x7fffc9cd7408)
    at /home/zed/prog/blender/source/blender/editors/physics/particle_edit.c:2658
- 4  0x0000555557afedd6 in delete_exec (C=0x7fffe3858188, op=0x7fffc5fbe208) at /home/zed/prog/blender/source/blender/editors/physics/particle_edit.c:3072
- 5  0x000055555752fc52 in WM_menu_invoke_ex (C=0x7fffe3858188, op=0x7fffc5fbe208, opcontext=1)
    at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_operators.c:741
#6  0x000055555752fda3 in WM_menu_invoke (C=0x7fffe3858188, op=0x7fffc5fbe208, UNUSED_event=0x7fffdd565c88)
    at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_operators.c:760
#7  0x0000555557512b86 in wm_operator_invoke (C=0x7fffe3858188, ot=0x7fffde5875c8, event=0x7fffdd565c88, properties=0x7fffffffd950, reports=0x0,
    poll_only=false, use_last_properties=true) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:1371
#8  0x0000555557513351 in wm_operator_call_internal (C=0x7fffe3858188, ot=0x7fffde5875c8, properties=0x7fffffffd950, reports=0x0, context=1, poll_only=false,
    event=0x7fffdd565c88) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:1582
#9  0x0000555557513574 in WM_operator_name_call_ptr (C=0x7fffe3858188, ot=0x7fffde5875c8, context=1, properties=0x7fffffffd950)
    at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:1630
- 10 0x000055555785913d in ui_apply_but_funcs_after (C=0x7fffe3858188) at /home/zed/prog/blender/source/blender/editors/interface/interface_handlers.c:782
- 11 0x0000555557871719 in ui_popup_handler (C=0x7fffe3858188, event=0x7fffc5c37708, userdata=0x7fffc9cb8748)
    at /home/zed/prog/blender/source/blender/editors/interface/interface_handlers.c:10130
#12 0x000055555751092b in wm_handler_ui_call (C=0x7fffe3858188, handler=0x7fffd302db68, event=0x7fffc5c37708, always_pass=0)
    at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:598
#13 0x0000555557515a76 in wm_handlers_do_intern (C=0x7fffe3858188, event=0x7fffc5c37708, handlers=0x7fffdd42bd98)
    at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:2551
#14 0x000055555751644d in wm_handlers_do (C=0x7fffe3858188, event=0x7fffc5c37708, handlers=0x7fffdd42bd98)
    at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:2784
- 15 0x0000555557517681 in wm_event_do_handlers (C=0x7fffe3858188) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:3145
- 16 0x000055555750becf in WM_main (C=0x7fffe3858188) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm.c:421
#17 0x000055555750657f in main (argc=1, argv=0x7fffffffe078) at /home/zed/prog/blender/source/creator/creator.c:503
Backtrace: ``` Thread 1 "blender" received signal SIGSEGV, Segmentation fault. 0x000055555858acbd in psys_face_mat (ob=0x7fffc5fa8208, mesh=0x0, pa=0x7fffc9cad008, mat=0x7fffffffd3f0, orco=1) at /home/zed/prog/blender/source/blender/blenkernel/intern/particle.c:2984 2984 if (i == -1 || i >= mesh->totface) { unit_m4(mat); return; } (gdb) bt #0 0x000055555858acbd in psys_face_mat (ob=0x7fffc5fa8208, mesh=0x0, pa=0x7fffc9cad008, mat=0x7fffffffd3f0, orco=1) at /home/zed/prog/blender/source/blender/blenkernel/intern/particle.c:2984 #1 0x000055555858b04b in psys_mat_hair_to_orco (ob=0x7fffc5fa8208, mesh=0x0, from=1, pa=0x7fffc9cad008, hairmat=0x7fffffffd3f0) at /home/zed/prog/blender/source/blender/blenkernel/intern/particle.c:3027 #2 0x0000555557af7ed4 in PE_mirror_particle (ob=0x7fffc5fa8208, mesh=0x0, psys=0x7fffc9cd7408, pa=0x7fffc9cad008, mpa=0x7fffc9cad7d8) at /home/zed/prog/blender/source/blender/editors/physics/particle_edit.c:997 #3 0x0000555557afd656 in remove_tagged_keys (ob=0x7fffc5fa8208, psys=0x7fffc9cd7408) at /home/zed/prog/blender/source/blender/editors/physics/particle_edit.c:2658 - 4 0x0000555557afedd6 in delete_exec (C=0x7fffe3858188, op=0x7fffc5fbe208) at /home/zed/prog/blender/source/blender/editors/physics/particle_edit.c:3072 - 5 0x000055555752fc52 in WM_menu_invoke_ex (C=0x7fffe3858188, op=0x7fffc5fbe208, opcontext=1) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_operators.c:741 #6 0x000055555752fda3 in WM_menu_invoke (C=0x7fffe3858188, op=0x7fffc5fbe208, UNUSED_event=0x7fffdd565c88) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_operators.c:760 #7 0x0000555557512b86 in wm_operator_invoke (C=0x7fffe3858188, ot=0x7fffde5875c8, event=0x7fffdd565c88, properties=0x7fffffffd950, reports=0x0, poll_only=false, use_last_properties=true) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:1371 #8 0x0000555557513351 in wm_operator_call_internal (C=0x7fffe3858188, ot=0x7fffde5875c8, properties=0x7fffffffd950, reports=0x0, context=1, poll_only=false, event=0x7fffdd565c88) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:1582 #9 0x0000555557513574 in WM_operator_name_call_ptr (C=0x7fffe3858188, ot=0x7fffde5875c8, context=1, properties=0x7fffffffd950) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:1630 - 10 0x000055555785913d in ui_apply_but_funcs_after (C=0x7fffe3858188) at /home/zed/prog/blender/source/blender/editors/interface/interface_handlers.c:782 - 11 0x0000555557871719 in ui_popup_handler (C=0x7fffe3858188, event=0x7fffc5c37708, userdata=0x7fffc9cb8748) at /home/zed/prog/blender/source/blender/editors/interface/interface_handlers.c:10130 #12 0x000055555751092b in wm_handler_ui_call (C=0x7fffe3858188, handler=0x7fffd302db68, event=0x7fffc5c37708, always_pass=0) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:598 #13 0x0000555557515a76 in wm_handlers_do_intern (C=0x7fffe3858188, event=0x7fffc5c37708, handlers=0x7fffdd42bd98) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:2551 #14 0x000055555751644d in wm_handlers_do (C=0x7fffe3858188, event=0x7fffc5c37708, handlers=0x7fffdd42bd98) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:2784 - 15 0x0000555557517681 in wm_event_do_handlers (C=0x7fffe3858188) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:3145 - 16 0x000055555750becf in WM_main (C=0x7fffe3858188) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm.c:421 #17 0x000055555750657f in main (argc=1, argv=0x7fffffffe078) at /home/zed/prog/blender/source/creator/creator.c:503 ```

This issue was referenced by 6f087be9f9

This issue was referenced by 6f087be9f97d6e4b8637b297322438cf23491cae

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63590
No description provided.