Fix T63590: Blender crashes when deleting particle hair keys